--- a/config.toml
+++ b/config.toml
@@ -8,8 +8,8 @@
 title = "Kjartan Kloster Osmundsen"
 
 # The URL of your site.
-# End your URL with a `/` trailing slash, e.g. `https://kjartako.no/`.
-baseurl = "/"
+# End your URL with a `/` trailing slash, e.g. `https://example.com/`.
+baseurl = "https://kjartako.no/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
